Added grid on sections

--- a/index.html
+++ b/index.html
@@ -58,45 +58,49 @@
 		<div class="stickyheader"><h2><span id="flower">&#10059;</span> Introduction</h2></div>
 		<div class="sectionmain">
 			<div class="paragraphs-grid">
-				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line</p></div>
+				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow.</p>
+				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was <mark>its strong echo in the present</mark>  — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.
+				</p> </div>
 				<div class="bigtext-grid">
 				<section><p class="bigtext">— as if to inhabit the thing in this crafted way was <mark>to resist the advance of industrial reification somehow.</mark></p></section></div>
-			<section>
-				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.
-				</p>  
 			</div>
 		</section>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Adolf Loos</h2></div>
 			<div class="sectionmain">
+				<div class="paragraphs-grid">
 			<section>
-				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p> </section>
+				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p> 
+				<p>In this regard “Ornament and Crime” (1908) is his fiercest polemic, for there he associates the Art Nouveau designer with a child smearing walls and a “Papuan” tattooing skin. For Loos the ornate design of <mark>Art Nouveau is erotic and degenerate, a reversal of the proper path of civilization</mark> to sublimate, to distinguish, and to purify: thus his notorious formula<sup>1</sup>.</p> 
+				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p> </section>
+			</div>
 			<section>
-				<p>In this regard “Ornament and Crime” (1908) is his fiercest polemic, for there he associates the Art Nouveau designer with a child smearing walls and a “Papuan” tattooing skin. For Loos the ornate design of Art Nouveau is erotic and degenerate, a reversal of the proper path of civilization to sublimate, to distinguish, and to purify: thus his notorious formula -</p> <p class="bigtext">“the evolution of culture is synonymous with the removal of ornament from utilitarian objects” — and his infamous association of “ornament and crime.”</p> </section>
-				<section>
-				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p> 
-			</section>
+				<p class="bigtext"><sup>1</sup>“the evolution of culture is synonymous with the removal of ornament from utilitarian objects” — and his infamous association of “ornament and crime.”</p> </section>
 		</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> <em>Poor Little Rich Man</em></h2></div>
 			<div class="sectionmain">
+				<div class="paragraphs-grid">
 			<section>
 				<p>Loos began his battle with Art Nouveau a decade before “Ornament and Crime.” A pointed attack comes in 1900, in the form of an allegorical skit about “a poor little rich man” who commissions an Art Nouveau designer to put “Art in each and every thing”:</p>
 				<p class="decoratedparagraph">Each room formed a symphony of colors, complete in itself. Walls, wall coverings, furniture, and materials were made to harmonize in the most artful ways. Each household item had its own specific place and was integrated with the others in the most wonderful combinations. The architect has forgotten nothing, absolutely nothing. Cigar ashtrays, cutlery, light switches — everything, everything was made by him.</p> </section>
 				<section>
-				<p>This <em>Gesamtkunstwerk</em> does more than combine architecture, art, and craft; it commingles subject and object:</p>
-				<p class="bigtext"> “the individuality of the owner was expressed in every ornament, every form, every nail.”</p> </section>
+				<p>This <em>Gesamtkunstwerk</em> does more than combine architecture, art, and craft; it commingles subject and object:<sup>2</sup></p>
 				<section>
-					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: </p> <p class="bigtext2">“The happy man suddenly felt deeply, deeply unhappy ...”</p> </section>
-
+					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it:<sup>3</sup></p></section>
 			</div>
+			<section class="morebigtext">
+				<p class="bigtext"> <sup>2</sup>“the individuality of the owner was expressed in every ornament, every form, every nail.”</p>
+				<p class="bigtext"> <sup>3</sup>“The happy man suddenly felt deeply, deeply unhappy ...”</p>
+			</section>
+		</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Living <em>"with one's own corpse."</em></h2></div>
 			<div class="sectionmain">
 				<section>
-					<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to <mark>go about life with one’s own corpse. Yes indeed. He is finished. He is complete!”</mark> For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
-			<section>
-				<p>For Loos, on the other hand, this triumphant overcoming of limits is a catastrophic loss of the same </p> <p class="bigtext">— loss of the objective constraints required to define any “future living and striving, developing and desiring.”</p> 
-			<section>
+					<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to <mark>go about life with one’s own corpse. Yes indeed. He is finished. He is complete!”</mark> For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished. For Loos, on the other hand, this triumphant overcoming of limits is a catastrophic loss of the same.<sup>4</sup></p>
 				<p> Far from a transcendence of death, this loss of finitude is a death-in-life, as figured in the ultimate trope of indistinction, living “with one’s own corpse.”  Such is the malaise of “the poor little rich man”: rather than a man of qualities, he is a man without them (as another Viennese scourge, the great novelist Robert Musil, would soon put it), for what he lacks, in his very completion, is difference or distinction. In a typically pithy statement of 1912 Kraus would call this lack of distinction, which precludes “all future living and striving,” a lack of “running-room”.</p>
-			</section>
+			 </section>
+			 <div>
+				<p class="decoratedparagraph2">— <sup span id="sup2">4</sup> loss of the objective constraints required to define any “future living and striving, developing and desiring.”</p> </div>
+		</div>
 		</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Chamber Pot</h2></div>
 			<div class="sectionmain">
