fixed grid for Chamber pot section

--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
 		</div>
 		</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Chamber Pot</h2></div>
-			<div class="sectionmain">
+			<div class="sectionmain3">
 			<section>
-				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. </p> <p class="bigtext2">The others, the positive ones [i.e., those who fail to make this distinction], are divided into <mark>those who use the urn as a chamber pot and those who use the chamber pot as an urn.</mark></p> </section>
+				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. </p> <p class="bigtext2">The others, the positive ones [i.e., those who fail to make this distinction], are divided into <mark>those who use the urn as a chamber pot and those who use the chamber pot as an urn.</mark></p>
+					<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p> 
+				</section>
 			<section>
-				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things:</p> <p class="decoratedparagraph"> they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture.</p> </section>
-			<section>
-				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p> </section>
-			</section>
+				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things:</p> <p class="decoratedparagraph3"> they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture.</p> </section>
 		</div>
 	<!-- Below is my take on the reading -->
 	<div class="stickyheader"><h2><span id="flower2">&#10059;</span> My reading response</h2></div>
