Fixed reading response section on desktop

--- a/index.html
+++ b/index.html
@@ -116,17 +116,10 @@
 	<div class="sectionmain2">
 	<section>
 				<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
-			</section>
-			<section>
-				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality.</p> <p class="bigtext2">However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p> </section>
-			<section>
+				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality.</p> <p class="bigtext2">However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p> 
 				<p>From the reading, I learned to be critical as a designer when creating work. Hal Foster inspired me to raise questions about modern-day design trends. For example, as an interface designer, I often use top industry brands like Apple to get my design inspiration. <mark>By following trends, am I mindlessly spreading specific brand messages through my works?</mark> Am I doing anything impactful for society or just adding to consumerism? Am I just creating aesthetically pleasing work, or is there an innovation behind it?</p>
-			</section>
-			<section>
-				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p></section>
-			<section>
-				<p>In conclusion, as a designer, I strongly agree with Hal Foster's message to challenge ourselves and create works for a better future rather than add to decorations.</p></section>
-			<section>
+				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p>
+				<p>In conclusion, as a designer, I strongly agree with Hal Foster's message to challenge ourselves and create works for a better future rather than add to decorations.</p>
 				<p>By Bulgan (Bee) Altangerel</p>
 			</section>
 			<section class="wrapup">
