--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<div class="stickyheader"><h2><span id="flower2">&#10059;</span> Colophon</h2></div>
 	<div class="sectionmain2">
 		<section>
-			<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
+			<p>This website was designed and coded to reflect the Art Nouveau theme from the reading, combined with modern design elements. I drew inspiration from decorative arched windows often associated with the Art Nouveau period, using circular text animation in the title, I created the feel of a decorative arc. Dark borders and frames, commonly seen in Art Nouveau artworks, inspired the addition of borders to my text boxes. For the color palette, I chose earth tones frequently used during the period—such as orange, green, and black—to represent nature. To incorporate modern design, I used the clean and contemporary Montserrat font and added animation loops to give the website a dynamic and modern aesthetic.</p>
 		</section>
 	</div>
 		</article>
